# GameBoyEmulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-test.yaml
include/cpu/cpu/: Cpu.hpp
include/cpu/cpu/decoder/: Decoder.hpp
include/cpu/cpu/register/: Register.hpp
include/disassembler/disassembler/: Cartridge.hpp  CartridgeInterface.hpp  CartridgeLoader.hpp  Loader.hpp  LoaderInterface.hpp  MemoryBankController.hpp
include/disassembler/disassembler/mbc/: MemoryBankController.hpp
include/logger/logger/: Logger.hpp
include/memory/memory/: Memory.hpp
include/memory/memory/register/: Register.hpp
mock/: CartridgeMock.hpp  LoaderMock.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/cpu/: CMakeLists.txt  Cpu.cpp
src/cpu/decoder/: Decoder.cpp
src/cpu/register/: Register.cpp
src/disassembler/: CMakeLists.txt  Cartridge.cpp  CartridgeLoader.cpp  Loader.cpp  MemoryBankController.cpp
src/disassembler/mbc/: MemoryBankController.cpp
src/logger/: CMakeLists.txt  Logger.cpp
src/memory/: CMakeLists.txt  Memory.cpp
src/memory/register/: Register.cpp
test/: CMakeLists.txt  CartridgeInterpreterTest.cpp  OpCodesTest.cpp
test/memoryBankController/: MemoryBankControllerTest.cpp
